--- a/AlgebraicStructure/AlgebraicStructure.csproj
+++ b/AlgebraicStructure/AlgebraicStructure.csproj
@@ -32,12 +32,12 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <!-- A reference to the entire .NET Framework is automatically included -->
-  </ItemGroup>
-  <ItemGroup>
     <Compile Include="Magma.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Magma.Implementation.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <Reference Include="System" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
